bases/default-backend/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: default-backend
spec:
  parentRefs:
  - name: nginx
    namespace: default-backend
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
      method: GET
    backendRefs:
    - name: nginx-service
      port: 80
